--- a/login.html
+++ b/login.html
@@ -20,23 +20,24 @@
                 <i class="fas fa-graduation-cap fa-lg"></i>
                 <h1>MyLi</h1>
             </div>
-            <div class="inputs">
-                <div class="input">
-                    <label for="username">Username: </label>
-                    <input type="text" name="username" id="username" placeholder="USERNAME" required>
+            <form action="./controllers/auth/login.php" method="POST">
+                <div class="inputs">
+                    <div class="input">
+                        <label for="username">Username: </label>
+                        <input type="text" name="username" placeholder="USERNAME" required>
+                    </div>
+                    <div class="input">
+                        <label for="password">Password: </label>
+                        <input type="password" name="password" placeholder="PASSWORD" required>
+                    </div>
                 </div>
-                <div class="input">
-                    <label for="password">Password: </label>
-                    <input type="password" name="password" id="password" placeholder="PASSWORD" required>
+                <div class="actions">
+                    <button type="submit">Login</button>
                 </div>
-            </div>
-            <div class="actions">
-                <button type="submit" onclick="window.location.href='/sandbox.html'">Login</button>
-            </div>
+            </form>
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js@3.2.1/dist/chart.min.js"></script>
 </body>
 
 </html>
