latest UI for Student module

--- a/student/stdLogbookView.html
+++ b/student/stdLogbookView.html
@@ -22,7 +22,7 @@
 
             <ul class="list-unstyled components">
                 <li >
-                    <a href="/stdBulletin.html">
+                    <a href="/student/stdBulletin.html">
                         <i style="width: 30px" class="far fa-newspaper"></i> Bulletin
                     </a>
                 </li>
