--- a/student/stdSvinfo.html
+++ b/student/stdSvinfo.html
@@ -6,8 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" />
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/css/bootstrap.css">
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.10.24/css/dataTables.bootstrap4.min.css">
 
     <title>Sandbox</title>
     <link rel="stylesheet" href="/styles/stdBulletin.css">
@@ -24,7 +25,7 @@
 
             <ul class="list-unstyled components">
                 <li>
-                    <a href="/stdBulletin.html">
+                    <a href="/student/stdBulletin.html">
                         <i style="width: 30px" class="far fa-newspaper"></i> Bulletin
                     </a>
                 </li>
@@ -88,24 +89,50 @@
             <!-- CONTENT -->
             <div class="container-fluid px-4">
                 <div class="row g-5 my-4">
-
+                    <div class="card-deck">
+                        <div class="card" style="max-width: 25rem;">
+                            <img class="card-img-top" src="../assets/img/anakin.jpg" alt="Card image cap">
+                            <div class="card-body">
+                                <h5 class="card-title">Faculty Supervisor</h5>
+                            </div>
+                            <ul class="list-group list-group-flush">
+                                <li class="list-group-item">Mr. Lorem Ipsum</li>
+                                <li class="list-group-item">0107142123</li>
+                                <li class="list-group-item">test@gmail.com</li>
+                            </ul>
+                        
+                        </div>
+                        <div class="card" style="max-width: 25rem;">
+                            <img class="card-img-top" src="../assets/img/anon.jpg" alt="Card image cap">
+                            <div class="card-body">
+                                <h5 class="card-title">Industry Supervisor</h5>
+                            </div>
+                            <ul class="list-group list-group-flush">
+                                <li class="list-group-item">Mr. Lorem Ipsum</li>
+                                <li class="list-group-item">0107142456</li>
+                                <li class="list-group-item">test1108@gmail.com</li>
+                            </ul>
+                        
+                        </div>        
+                    </div>
                 </div>
-
             </div>
-
         </div>
     </div>
 
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
-    <!-- Bootstrap JS -->
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"
-        integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm"
-        crossorigin="anonymous"></script>
+   <!-- Popper.JS -->
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"></script> -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.9.2/umd/popper.min.js"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"></script> -->
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js@3.2.1/dist/chart.min.js"></script>
+    <!-- jQuery CDN -->
+    <!-- <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script> -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script> -->
+
+    <!-- Bootstrap JS -->
+    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script> -->
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"></script>
 </body>
 
 </html>
