--- a/student/stdBulletin.html
+++ b/student/stdBulletin.html
@@ -22,7 +22,7 @@
 
             <ul class="list-unstyled components">
                 <li class="active">
-                    <a href="/stdBulletin.html">
+                    <a href="/student/stdBulletin.html">
                         <i style="width: 30px" class="far fa-newspaper"></i> Bulletin
                     </a>
                 </li>
@@ -86,7 +86,42 @@
             <!-- CONTENT -->
             <div class="container-fluid px-4">
                 <div class="row g-5 my-4">
-                   
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title">Announcement 1</h5>
+                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo ipsam nobis magnam cupiditate. Pariatur, cum mollitia recusandae iure quisquam autem illo in adipisci est, excepturi dolores aut modi ut culpa..</p>
+                            <p class="card-text"><small class="text-muted">Posted 3 mins ago</small></p>
+                        </div>
+                    </div>
+                    <br>
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title">Announcement 2</h5>
+                            <p class="card-text">Another Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque labore fuga, eos eligendi suscipit repellat odio optio, magni dolorem sed animi vel iste natus velit cum quas qui laborum error?.</p>
+                            <p class="card-text"><small class="text-muted">Posted 2 hours ago</small></p>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title">Announcement 3</h5>
+                            <p class="card-text">Another Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque labore fuga, eos eligendi suscipit repellat odio optio, magni dolorem sed animi vel iste natus velit cum quas qui laborum error?.</p>
+                            <p class="card-text"><small class="text-muted">Posted 5 hours ago</small></p>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title">Announcement 4</h5>
+                            <p class="card-text">Another Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque labore fuga, eos eligendi suscipit repellat odio optio, magni dolorem sed animi vel iste natus velit cum quas qui laborum error?.</p>
+                            <p class="card-text"><small class="text-muted">Posted yesterday</small></p>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title">Announcement 5</h5>
+                            <p class="card-text">Another Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque labore fuga, eos eligendi suscipit repellat odio optio, magni dolorem sed animi vel iste natus velit cum quas qui laborum error?.</p>
+                            <p class="card-text"><small class="text-muted">Posted last week</small></p>
+                        </div>
+                    </div>
                 </div>
 
             </div>
@@ -102,7 +137,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"
         integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm"
         crossorigin="anonymous"></script>
-        
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@3.2.1/dist/chart.min.js"></script>
 </body>
