--- a/student/stdBulletin.html
+++ b/student/stdBulletin.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
 
     <title>Sandbox</title>
-    <link rel="stylesheet" href="/styles/stdBulletin.css">
+    <link rel="stylesheet" href="../styles/stdBulletin.css">
 </head>
 
 <body>
@@ -22,7 +22,7 @@
 
             <ul class="list-unstyled components">
                 <li class="active">
-                    <a href="/student/stdBulletin.html">
+                    <a href="./stdBulletin.html">
                         <i style="width: 30px" class="far fa-newspaper"></i> Bulletin
                     </a>
                 </li>
@@ -33,13 +33,13 @@
                     </a>
                     <ul class="collapse list-unstyled" id="logbookSub">
                         <li>
-                            <a href="/student/stdLogbookAdd.html">
+                            <a href="./stdLogbookAdd.php">
                                 <i style="width: 30px" class="fas fa-plus"></i>
                                 Add Logbook
                             </a>
                         </li>
                         <li>
-                            <a href="/student/stdLogbookView.html">
+                            <a href="./stdLogbookView.php">
                                 <i style="width: 30px" class="far fa-eye"></i>
                                 View Logbook
                             </a>
@@ -47,13 +47,13 @@
                     </ul>
                 </li>
                 <li>
-                    <a href="/student/stdSvinfo.html">
+                    <a href="./stdSvinfo.html">
                         <i style="width: 30px" class="fas fa-info "></i>
                         Supervisor Info
                     </a>
                 </li>
                 <li>
-                    <a href="/student/stdReport.html">
+                    <a href="./stdReport.html">
                         <i style="width: 30px" class="fas fa-chart-pie"></i>
                         Report
                     </a>
